# UQ_PhysiCell

./: .gitignore  .readthedocs.yml  HPC_exploration.py  PhysiCellModel.py  PhysiCell_sumstats.py  README.md  RunSimulations.py  RunSimulationsSerial.py  SampleModel.ini  Samples_00.npy  SensitivityAnalisys.nf  job_000000.sh  job_000001.sh  job_calib.sh  main.py  main_SA.py  main_calib.py  pyproject.toml  setup.py
.github/workflows/: requirements.txt  test-examples.yml
XML_folder/: config_S000000_00.xml  config_S000000_01.xml  config_S000001_00.xml  config_S000001_01.xml
config/: PhysiCell_settings.xml
config/XML_folder/: config_S000000_00.xml  config_S000000_01.xml  config_S000001_00.xml  config_S000001_01.xml
config/XML_folder2/: config_S000000_00.xml  config_S000000_01.xml
doc/: .gitignore  Makefile  README.md  about.md  api_reference.md  bayesian_optimization.md  calibration.md  conf.py  docstring_examples.py  docstring_style_guide.md  examples  examples.md  funding.md  gui.md  index.md  installation.md  model_analysis.md  publications.md  rebuild_docs.sh  requirements.txt
doc/_static/: custom.css
examples/: HPC_exploration.py  Model_Struct.ini  PhysiCell.sh  RunSimulations.py  RunSimulationsSerial.py  SA.py  SA_ex4_ex5.py  SampleModel.ini  ex1_print.ipynb  ex1_print.py  ex2_runModel.ipynb  ex2_runModel.py  ex3_runModelCust.py  ex3_runSA_MultiTask.ipynb  ex4_runSA_MPI.ipynb  ex4_runSA_MPI.py  ex4_runSA_singleTask.py  ex5_runSA_MPI.py  ex6_runSA_AsymDiv.py  job_000000.sh  job_000002.sh  main_calib.py  slurm_script.sh  test_xml.py
examples/epi_caf_invasion/: uq_config.ini  uq_script.py  uq_slurm.sh
examples/epi_caf_invasion/config/ics/PDAC01/: cells.csv  cells_longname.csv
examples/epi_caf_invasion/config/ics/PDAC02/: cells.csv  cells_longname.csv
examples/exponential_growth/: configFile.ini  ex9_ABC_CalibrationContext.ipynb  obsData.csv  project
examples/exponential_growth/config/: PhysiCell_settings.xml  cells.csv  template.xml
examples/virus-mac-new/: GenerateData.ipynb  cell_counts.csv  ex5_OAT_example.ipynb  ex6_LHS_example.ipynb  ex7_Calib_BO.ipynb  ex7_GenerateData.ipynb  ex7_ObsData.csv  ex8_ABC_Calib.ipynb  ex8_ABC_CalibrationContext.ipynb  uq_pc_struc.ini
examples/virus-mac-new/config/: PhysiCell_settings.xml  cell_rules.csv  cells.csv
others/: job_generator.py
test/: SampleModel.ini  test_print.py  test_runModel.py  test_runModel2.py
test/config/: PhysiCell_settings.xml
tests/: test_abc_context.py  test_bo_context.py  test_bo_distances.py  test_bo_utils.py  test_distances.py  test_futures_run_sa_simulations.py  test_ma_database.py  test_ma_futures_run_simulations.py  test_ma_mpi_run_simulations.py  test_mpi_run_sa_simulations.py
uq_physicell/: GUI_UQ.py  GUI_UQ_tab1_select_params.py  GUI_UQ_tab2_sensitivity_analysis.py  GUI_UQ_tab3_calibration.py  LICENSE.md  SA_script.py  SA_utils.py  VERSION.py  __init__.py  pc_model.py  sumstats.py  uq_physicell.py
uq_physicell.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
uq_physicell/abc/: __init__.py  abc_context.py
uq_physicell/bo/: README.md  __init__.py  bo_context.py  database.py  distances.py  optimize.py  plot.py  plots.py  utils.py
uq_physicell/database/: __init__.py  bo_db.py  ma_db.py  utils.py
uq_physicell/gui/: load_files.py  main.py  main_window.py  tab1_select_params.py  tab2_model_analysis.py  tab3_calibration.py  tab4_model_selection.py  utils.py
uq_physicell/model_analysis/: __init__.py  database.py  ma_context.py  main.py  samplers.py  sensitivity_analysis.py  utils.py
uq_physicell/utils/: __init__.py  distances.py  model_wrapper.py  sumstats.py
